lustre/ptlrpc/recover.c
@@ -198,14 +198,17 @@ int ptlrpc_resend(struct obd_import *imp)
                 RETURN(-1);
         }
 
-	list_for_each_entry_safe(req, next, &imp->imp_sending_list,
-                                     rq_list) {
+	list_for_each_entry_safe(req, next, &imp->imp_sending_list, rq_list) {
 		LASSERTF((long)req > PAGE_CACHE_SIZE && req != LP_POISON,
-                         "req %p bad\n", req);
-                LASSERTF(req->rq_type != LI_POISON, "req %p freed\n", req);
-                if (!ptlrpc_no_resend(req))
-                        ptlrpc_resend_req(req);
-        }
+			 "req %p bad\n", req);
+		LASSERTF(req->rq_type != LI_POISON, "req %p freed\n", req);
+
+		/* If the request is allowed to be sent during replay and it
+		 * is not timeout yet, then it does not need to be resent. */
+		if (!ptlrpc_no_resend(req) &&
+		    (req->rq_timedout || !req->rq_allow_replay))
+			ptlrpc_resend_req(req);
+	}
 	spin_unlock(&imp->imp_lock);
 
 	RETURN(0);
